derniere etape avant le versionning tout marche bien 6janv25

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
   # Ajoutez votre navigation ici
 
 plugins:
+  - tags
   - git-authors
   - git-committers:
       repository: CreditMutuelArkea/tock
@@ -48,6 +49,8 @@ plugins:
       enable_creation_date: true
 
 markdown_extensions:
+ 
+  - attr_list
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -56,3 +59,5 @@ markdown_extensions:
 
 # Configurer l'édition dynamique
 edit_uri: "https://github.com/CreditMutuelArkea/tock/tree/1811_mkdocs_documentation_website/docs/docs/"
+
+
