implatation du changelog V1.0

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -18,7 +18,11 @@ theme:
 
 nav:
   # Ajoutez votre navigation ici
+# Hooks
+hooks:
+  - material/overrides/hooks/shortcodes.py
 
+  
 plugins:
   - tags
   - git-authors
