--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -54,6 +54,9 @@ plugins:
       enable_creation_date: true
 
 markdown_extensions:
+  - admonition
+  - codehilite
+  - pymdownx.emoji
   - attr_list
   - pymdownx.superfences:
       custom_fences:
