correction maximum de bug au launch 13janv

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -53,6 +53,10 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
 
+
+extra_css:
+  - /assets/css/overrides.scss
+
 markdown_extensions:
   - admonition
   - codehilite
