1ere insertion chatobt fonctionnelle

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -8,6 +8,8 @@ theme:
     view: material/eye
     repo: fontawesome/brands/github
   name: material
+  custom_dir: overrides/partials/
+
   
   palette:
     primary: blue
