--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-name: ci 
+name: ci
 on:
   push:
     branches:
@@ -25,5 +25,7 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material 
-      - run : cd docs
-      - run: mkdocs gh-deploy --force
+      - name: Deploy with MkDocs
+        run: |
+          cd docs
+          mkdocs gh-deploy --force
