Update github-actions.yml 5

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,35 +1,41 @@
-name: ci
+name: Deploy MkDocs Site
 on:
   push:
     branches:
-      - 1811_mkdocs_documentation_website
+      - master
+      - main
 permissions:
   contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # Étape 1 : Récupérer le code
+      # 1. Vérification du code source
       - uses: actions/checkout@v4
 
-      # Étape 2 : Configurer Python
+      # 2. Configuration des identifiants Git
+      - name: Configure Git Credentials
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+
+      # 3. Installation de Python
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
 
-      # Étape 3 : Installer les dépendances
+      # 4. Installation des dépendances MkDocs
       - name: Install dependencies
         run: pip install -r docs/requirements.txt
 
-      # Étape 4 : Construire les fichiers MkDocs
+      # 5. Construction du site statique dans un dossier temporaire (site/)
       - name: Build MkDocs site
         run: |
-          cd docs
-          mkdocs build --site-dir ../public
+          mkdocs build --config-file docs/mkdocs.yml --site-dir site
 
-      # Étape 5 : Déployer sur GitHub Pages
+      # 6. Déploiement vers GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./site
