--- a/docs/config/fr/mkdocs.yml
+++ b/docs/config/fr/mkdocs.yml
@@ -7,7 +7,7 @@ theme:
     custom_dir: '../../overrides/'                  # This is where the customization of the theme lives
     logo: assets/images/logo.svg                    # The logo is shared by all languages
     favicon: assets/images/favicon.ico              # The favicon is shared by all languages
-    language: en                                    # The build's language
+    language: fr                                   # The build's language
 
 extra:                                              # Language Selection
   alternate:  
