--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -24,14 +24,14 @@ nav:
 hooks:
   - material/overrides/hooks/shortcodes.py
   - hooks/copyapiswagger.py
-
+  
 plugins:
   - tags
-  # - git-authors
-  # - git-committers:
-  #     repository: CreditMutuelArkea/tock
-  #     branch: 1811_mkdocs_documentation_website
-  #     token: !ENV MKDOCS_GIT_COMMITTERS_APIKEY
+  - git-authors
+  - git-committers:
+      repository: CreditMutuelArkea/tock
+      branch: 1811_mkdocs_documentation_website
+      token: !ENV MKDOCS_GIT_COMMITTERS_APIKEY
   - search
   - i18n:
       docs_structure: folder
@@ -51,8 +51,8 @@ plugins:
           theme:
             palette:
               primary: blue
-  # - git-revision-date-localized:
-  #       enable_creation_date: true
+  - git-revision-date-localized:
+      enable_creation_date: true
 
 extra_css:
   - assets/css/style.css
