--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,6 +22,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.13.0
+      # 4. Installation des dépendances MkDocs
+      - name: Install dependencies
+        run: |
+          pip install -r docs/requirements.txt
       - name: Build MkDocs site
         run: |
           cd docs
