--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -158,6 +158,7 @@ jobs:
             exit 1
           else
             echo "✅ Artifact valide trouvé. Téléchargement..."
+            echo "✅ ID de l'artefact utilisé : $(echo "$ARTIFACT_RESPONSE" | jq -r '.artifacts[] | select(.expired == false) | .id' | head -n 1)"
             curl -L -o github-pages.zip -H "Authorization: token ${{ secrets.ACTIONS_ARTIFACT_TOKEN }}" "$ARTIFACT_URL"
           fi
 
@@ -165,6 +166,9 @@ jobs:
         run: |
           branch_name="${{ github.event.pull_request.head.ref }}"
           folder_path="docs/site/${branch_name}"
+
+          echo "🛠️ Chemin du dossier à supprimer : $folder_path"
+
 
           # Supprimer le dossier associé à la PR fermée ou supprimée
           if [ -d "$folder_path" ]; then
