--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -68,6 +68,11 @@ jobs:
               console.log("Aucun artefact trouvé.");
             }
 
+      - name: Copy mkdocs.yml to the artifact folder
+        run: |
+          echo "🔄 Copie du fichier mkdocs.yml dans le dossier de l'artifact"
+          cp ../mkdocs.yml docs/
+
       - uses: actions/setup-python@v5
         with:
           python-version: 3.13.0
