--- a/.github/workflows/doc-deploy.yml
+++ b/.github/workflows/doc-deploy.yml
@@ -142,7 +142,7 @@ jobs:
           script: |
             console.log('Commentaire sur la PR :');
             console.log(context.payload);
-            context.payload.pull_request
+            console.log(context.payload.pull_request)
             github.rest.issues.createComment({
               issue_number: context.payload.pull_request.number,
               owner: context.repo.owner,
