--- a/.github/workflows/doc-deploy.yml
+++ b/.github/workflows/doc-deploy.yml
@@ -251,6 +251,11 @@ jobs:
         with:
           path: docs/site
 
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+
       - name: Post cleanup comment
         uses: actions/github-script@v7
         with:
