--- a/.github/workflows/doc-deploy.yml
+++ b/.github/workflows/doc-deploy.yml
@@ -120,7 +120,8 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-latest
-    steps: - name: Deploy to GitHub Pages
+    steps: 
+    - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4: actions/deploy-pages@v4
 
